--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easier-jsever",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "use short methods instead of long methods",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,9 @@
     "coding"
   ],
   "author": "paras prajapat",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
