--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easier-jsever",
-  "version": "1.0.10",
+  "version": "1.0.14",
   "description": "use short methods instead of long methods",
   "main": "index.js",
   "scripts": {
@@ -15,9 +15,5 @@
     "coding"
   ],
   "author": "paras prajapat",
-  "license": "ISC",
-  "devDependencies": {
-    "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4"
-  }
+  "license": "ISC"
 }
