--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,7 @@
 {
   "name": "easier-jsever",
-  "version": "1.0.22",
+  "version": "1.1.3",
+  "files": [],
   "description": "use short methods instead of long methods",
   "main": "index.js",
   "scripts": {
