--- a/package/package.json
+++ b/package/package.json
@@ -1,7 +1,8 @@
 {
   "name": "easier-jsever",
-  "version": "1.1.3",
+  "version": "1.1.6",
   "files": [],
+  "type": "module",
   "description": "use short methods instead of long methods",
   "main": "index.js",
   "scripts": {
